fix menu on mobile

--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -89,6 +89,7 @@ header {
     nav {
       flex: 1 100%;
       overflow: hidden;
+      font-size: $size-6;
 
       &.closed {
         height: 0;
